# measurable-control-effectiveness

./: .codacy.yaml  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONSTITUTION.md  CONTRIBUTING.md  DIRECTIVES.md  LICENSE  LICENSE.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
configs/: gates.json
docs/: technical-approach.md
src/benchmark/: __init__.py
src/benchmark/datasets/: __init__.py  synthetic.py
src/benchmark/drift/: __init__.py  detectors.py
src/benchmark/evidence/: __init__.py  writer.py
src/benchmark/gates/: __init__.py  evaluator.py
src/benchmark/quality/: __init__.py  detectors.py
src/benchmark/runners/: __init__.py  __main__.py  orchestrator.py
src/benchmark/scoring/: __init__.py  ground_truth.py
tests/: test_datasets.py  test_drift.py  test_integration.py  test_quality.py
